--- a/BOW meets BOP/bag_of_popcorn.ipynb
+++ b/BOW meets BOP/bag_of_popcorn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,7 @@
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import PorterStemmer\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
     "from gensim.models import Word2Vec\n",
     "from string import punctuation\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
@@ -145,37 +146,31 @@
     "* Perform Sentence and word tokenization. OR\n",
     "* (DONE) Perform word tokenization.\n",
     "* (DONE) Perform Stemming.\n",
+    "* (DONE) Perform Lemmatization.\n",
     "* (DONE) Perform Tokenization. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A Compelling Thriller!!, 10 December 2005 Author:littlehammer16787 from United States<br /><br />Just Cause<br /><br />Starring:Sean Connery,Laurence Fishburne, and Blair Underwood.<br /><br />A liberal,though good-hearted Harvard law professor Paul Armstrong is convoked to the Flordia Everglades by unjustly convicted black guy Bobby Earl.Confessing that sadistic,cold-hearted cops vilifyied and beat him to a pulp to get the confession of a gruesome murder of an eleven year old girl. As he digs further and further into the mysterious case he realizes that Bobby Earl is a victim of discrimination.That the black police detective Lt.Tanny Brown of the small community is corrupt and villainously mean. When the infamous,psychotic serial killer Blair Sullivan is introduced.He discovers that he knows the location of the murder weapon that butchered the little girl.When Armstrong finds that there are lucid coincidences of Sullivan's road trip through the small town and the letter he personally wrote. Bobby Earl gets a re-trial.Is unfettered from prison and eludes his horrific punishment. All seems swimmingly well until an unexpected phone call from serial killer Sullivan comes into focus.Armstrong discovers a lurid double killing which happens to be Sullivan's parents.Whom he immensely detests.Sullivan divulges to Armstrong the truth of Joanie Shriver's heinous murder and why he was brought here.It turns out that Bobby Earl is a psychopathic murderer and he really did rape and kill Joanie Shriver.He just merely struck a bargain with fiendish psycho Sullivan. To get loose so he could kill again for revenge.Upon Armstrong's beautiful wife and daughter.Now Sullivan is executed to his death. Armstrong and tough good guy Brown chase the malevolent villain to the Everglades in order to thwart him.When they arrive Armstrong learns that the psychotic sicko Bobby Earl plans to kill his wife and daughter for a former rape trial that inevitably made him endure agonizing pain and castration.But good,virtuous cop Brown emerges and thwarts the brutal baddie.Is stabbed and eaten by ruthless,man-eating alligators.Paul Armstrong,Tanny Brown,his wife,and daughter survive and live happily ever after. A good thriller that works.Delivers both mystery and subterfuge.How reluctant blacks are hazed by racist lawmen.Sentenced to unfair penalties.Even though sometimes the wrongfully convicted innocent, friendly black man may in truth be the vicious baddie. Sean Connery is great as the oblivious,holier than thou hero.Laurence Fishburne is watchably amazing as the mean,arrogant,but good guy cop. Underwood and Harris are over the top and invigorating as the malevolent psychos.Capeshaw is okay.Ruby Dee is great as the tenacious grandmother.The rest of the cast is wonderful as well.\n",
+      "['compel', 'thriller', 'decemb', 'author', 'littlehamm', 'unit', 'state', 'caus', 'star', 'sean', 'conneri', 'laurenc', 'fishburn', 'blair', 'underwood', 'liber', 'though', 'good', 'heart', 'harvard', 'law', 'professor', 'paul', 'armstrong', 'convok', 'flordia', 'everglad', 'unjustli', 'convict', 'black', 'guy', 'bobbi', 'earl', 'confess', 'sadist', 'cold', 'heart', 'cop', 'vilifyi', 'beat', 'pulp', 'get', 'confess', 'gruesom', 'murder', 'eleven', 'year', 'old', 'girl', 'dig', 'mysteri', 'case', 'realiz', 'bobbi', 'earl', 'victim', 'discrimin', 'black', 'polic', 'detect', 'tanni', 'brown', 'small', 'commun', 'corrupt', 'villain', 'mean', 'infam', 'psychot', 'serial', 'killer', 'blair', 'sullivan', 'introduc', 'discov', 'know', 'locat', 'murder', 'weapon', 'butcher', 'littl', 'girl', 'armstrong', 'find', 'lucid', 'coincid', 'sullivan', 'road', 'trip', 'small', 'town', 'letter', 'person', 'wrote', 'bobbi', 'earl', 'get', 'trial', 'unfett', 'prison', 'elud', 'horrif', 'punish', 'seem', 'swimmingli', 'well', 'unexpect', 'phone', 'call', 'serial', 'killer', 'sullivan', 'come', 'focu', 'armstrong', 'discov', 'lurid', 'doubl', 'kill', 'happen', 'sullivan', 'parent', 'immens', 'detest', 'sullivan', 'divulg', 'armstrong', 'truth', 'joani', 'shriver', 'heinou', 'murder', 'brought', 'turn', 'bobbi', 'earl', 'psychopath', 'murder', 'realli', 'rape', 'kill', 'joani', 'shriver', 'mere', 'struck', 'bargain', 'fiendish', 'psycho', 'sullivan', 'get', 'loos', 'could', 'kill', 'reveng', 'upon', 'armstrong', 'beauti', 'wife', 'daughter', 'sullivan', 'execut', 'death', 'armstrong', 'tough', 'good', 'guy', 'brown', 'chase', 'malevol', 'villain', 'everglad', 'order', 'thwart', 'arriv', 'armstrong', 'learn', 'psychot', 'sicko', 'bobbi', 'earl', 'plan', 'kill', 'wife', 'daughter', 'former', 'rape', 'trial', 'inevit', 'made', 'endur', 'agon', 'pain', 'castrat', 'good', 'virtuou', 'cop', 'brown', 'emerg', 'thwart', 'brutal', 'baddi', 'stab', 'eaten', 'ruthless', 'man', 'eat', 'allig', 'paul', 'armstrong', 'tanni', 'brown', 'wife', 'daughter', 'surviv', 'live', 'happili', 'ever', 'good', 'thriller', 'work', 'deliv', 'mysteri', 'subterfug', 'reluct', 'black', 'haze', 'racist', 'lawmen', 'sentenc', 'unfair', 'penalti', 'even', 'though', 'sometim', 'wrong', 'convict', 'innoc', 'friendli', 'black', 'man', 'may', 'truth', 'viciou', 'baddi', 'sean', 'conneri', 'great', 'oblivi', 'holier', 'thou', 'hero', 'laurenc', 'fishburn', 'watchabl', 'amaz', 'mean', 'arrog', 'good', 'guy', 'cop', 'underwood', 'harri', 'top', 'invigor', 'malevol', 'psycho', 'capeshaw', 'okay', 'rubi', 'dee', 'great', 'tenaci', 'grandmoth', 'rest', 'cast', 'wonder', 'well']\n",
       "\n",
-      " ['compel', 'thriller', 'decemb', 'author', 'littlehamm', 'unit', 'state', 'caus', 'star', 'sean', 'conneri', 'laurenc', 'fishburn', 'blair', 'underwood', 'liber', 'though', 'good', 'heart', 'harvard', 'law', 'professor', 'paul', 'armstrong', 'convok', 'flordia', 'everglad', 'unjustli', 'convict', 'black', 'guy', 'bobbi', 'earl', 'confess', 'sadist', 'cold', 'heart', 'cop', 'vilifyi', 'beat', 'pulp', 'get', 'confess', 'gruesom', 'murder', 'eleven', 'year', 'old', 'girl', 'dig', 'mysteri', 'case', 'realiz', 'bobbi', 'earl', 'victim', 'discrimin', 'black', 'polic', 'detect', 'lt', 'tanni', 'brown', 'small', 'commun', 'corrupt', 'villain', 'mean', 'infam', 'psychot', 'serial', 'killer', 'blair', 'sullivan', 'introduc', 'discov', 'know', 'locat', 'murder', 'weapon', 'butcher', 'littl', 'girl', 'armstrong', 'find', 'lucid', 'coincid', 'sullivan', 'road', 'trip', 'small', 'town', 'letter', 'person', 'wrote', 'bobbi', 'earl', 'get', 'trial', 'unfett', 'prison', 'elud', 'horrif', 'punish', 'seem', 'swimmingli', 'well', 'unexpect', 'phone', 'call', 'serial', 'killer', 'sullivan', 'come', 'focu', 'armstrong', 'discov', 'lurid', 'doubl', 'kill', 'happen', 'sullivan', 'parent', 'immens', 'detest', 'sullivan', 'divulg', 'armstrong', 'truth', 'joani', 'shriver', 'heinou', 'murder', 'brought', 'turn', 'bobbi', 'earl', 'psychopath', 'murder', 'realli', 'rape', 'kill', 'joani', 'shriver', 'mere', 'struck', 'bargain', 'fiendish', 'psycho', 'sullivan', 'get', 'loos', 'could', 'kill', 'reveng', 'upon', 'armstrong', 'beauti', 'wife', 'daughter', 'sullivan', 'execut', 'death', 'armstrong', 'tough', 'good', 'guy', 'brown', 'chase', 'malevol', 'villain', 'everglad', 'order', 'thwart', 'arriv', 'armstrong', 'learn', 'psychot', 'sicko', 'bobbi', 'earl', 'plan', 'kill', 'wife', 'daughter', 'former', 'rape', 'trial', 'inevit', 'made', 'endur', 'agon', 'pain', 'castrat', 'good', 'virtuou', 'cop', 'brown', 'emerg', 'thwart', 'brutal', 'baddi', 'stab', 'eaten', 'ruthless', 'man', 'eat', 'allig', 'paul', 'armstrong', 'tanni', 'brown', 'wife', 'daughter', 'surviv', 'live', 'happili', 'ever', 'good', 'thriller', 'work', 'deliv', 'mysteri', 'subterfug', 'reluct', 'black', 'haze', 'racist', 'lawmen', 'sentenc', 'unfair', 'penalti', 'even', 'though', 'sometim', 'wrong', 'convict', 'innoc', 'friendli', 'black', 'man', 'may', 'truth', 'viciou', 'baddi', 'sean', 'conneri', 'great', 'oblivi', 'holier', 'thou', 'hero', 'laurenc', 'fishburn', 'watchabl', 'amaz', 'mean', 'arrog', 'good', 'guy', 'cop', 'underwood', 'harri', 'top', 'invigor', 'malevol', 'psycho', 'capeshaw', 'okay', 'rubi', 'dee', 'great', 'tenaci', 'grandmoth', 'rest', 'cast', 'wonder', 'well']\n"
+      " ['compel', 'thriller', 'decemb', 'author', 'littlehamm', 'unit', 'state', 'caus', 'star', 'sean', 'conneri', 'laurenc', 'fishburn', 'blair', 'underwood', 'liber', 'though', 'good', 'heart', 'harvard', 'law', 'professor', 'paul', 'armstrong', 'convok', 'flordia', 'everglad', 'unjustli', 'convict', 'black', 'guy', 'bobbi', 'earl', 'confess', 'sadist', 'cold', 'heart', 'cop', 'vilifyi', 'beat', 'pulp', 'get', 'confess', 'gruesom', 'murder', 'eleven', 'year', 'old', 'girl', 'dig', 'mysteri', 'case', 'realiz', 'bobbi', 'earl', 'victim', 'discrimin', 'black', 'polic', 'detect', 'tanni', 'brown', 'small', 'commun', 'corrupt', 'villain', 'mean', 'infam', 'psychot', 'serial', 'killer', 'blair', 'sullivan', 'introduc', 'discov', 'know', 'locat', 'murder', 'weapon', 'butcher', 'littl', 'girl', 'armstrong', 'find', 'lucid', 'coincid', 'sullivan', 'road', 'trip', 'small', 'town', 'letter', 'person', 'wrote', 'bobbi', 'earl', 'get', 'trial', 'unfett', 'prison', 'elud', 'horrif', 'punish', 'seem', 'swimmingli', 'well', 'unexpect', 'phone', 'call', 'serial', 'killer', 'sullivan', 'come', 'focu', 'armstrong', 'discov', 'lurid', 'doubl', 'kill', 'happen', 'sullivan', 'parent', 'immens', 'detest', 'sullivan', 'divulg', 'armstrong', 'truth', 'joani', 'shriver', 'heinou', 'murder', 'brought', 'turn', 'bobbi', 'earl', 'psychopath', 'murder', 'realli', 'rape', 'kill', 'joani', 'shriver', 'mere', 'struck', 'bargain', 'fiendish', 'psycho', 'sullivan', 'get', 'loo', 'could', 'kill', 'reveng', 'upon', 'armstrong', 'beauti', 'wife', 'daughter', 'sullivan', 'execut', 'death', 'armstrong', 'tough', 'good', 'guy', 'brown', 'chase', 'malevol', 'villain', 'everglad', 'order', 'thwart', 'arriv', 'armstrong', 'learn', 'psychot', 'sicko', 'bobbi', 'earl', 'plan', 'kill', 'wife', 'daughter', 'former', 'rape', 'trial', 'inevit', 'made', 'endur', 'agon', 'pain', 'castrat', 'good', 'virtuou', 'cop', 'brown', 'emerg', 'thwart', 'brutal', 'baddi', 'stab', 'eaten', 'ruthless', 'man', 'eat', 'allig', 'paul', 'armstrong', 'tanni', 'brown', 'wife', 'daughter', 'surviv', 'live', 'happili', 'ever', 'good', 'thriller', 'work', 'deliv', 'mysteri', 'subterfug', 'reluct', 'black', 'haze', 'racist', 'lawman', 'sentenc', 'unfair', 'penalti', 'even', 'though', 'sometim', 'wrong', 'convict', 'innoc', 'friendli', 'black', 'man', 'may', 'truth', 'viciou', 'baddi', 'sean', 'conneri', 'great', 'oblivi', 'holier', 'thou', 'hero', 'laurenc', 'fishburn', 'watchabl', 'amaz', 'mean', 'arrog', 'good', 'guy', 'cop', 'underwood', 'harri', 'top', 'invigor', 'malevol', 'psycho', 'capeshaw', 'okay', 'rubi', 'dee', 'great', 'tenaci', 'grandmoth', 'rest', 'cast', 'wonder', 'well']\n"
      ]
     }
    ],
    "source": [
-    "# labeled_train_data['review'] = labeled_train_data['review'].astype('string')\n",
-    "# test_data['review'] = test_data['review'].astype('string')\n",
-    "# unlabeled_train_data['review'] = unlabeled_train_data['review'].astype('string')\n",
-    "\n",
-    "# labeled_train_data['review'] = labeled_train_data['review'].lower()\n",
-    "# test_data['review'] = test_data['review'].lower()\n",
-    "# unlabeled_train_data['review'] = unlabeled_train_data['review'].lower()\n",
-    "\n",
     "stopwords_en = set(stopwords.words('english'))\n",
     "punctuation_en = set(punctuation)\n",
     "stopwords_punctuation_en = stopwords_en.union(punctuation_en)\n",
-    "porter = PorterStemmer()\n",
+    "# porter = PorterStemmer()\n",
+    "lemmatizer = WordNetLemmatizer()\n",
     "\n",
     "combined_dataset = [labeled_train_data,test_data,unlabeled_train_data]\n",
     "print(labeled_train_data.loc[20882,'review'])\n",
@@ -184,8 +179,8 @@
     "    dataset['review'] = dataset['review'].astype('string')\n",
     "    dataset.replace(to_replace={'review':{r'http\\S+':'',r'[0-9]+':'',  r'<br \\/>':' ', r'[^A-Za-z0-9# ]+':' '}}, regex=True, inplace=True)\n",
     "    dataset['review'] = dataset['review'].str.lower().apply(word_tokenize)\n",
-    "    dataset['review'] = dataset['review'].apply(lambda x: [word for word in x if word not in stopwords_punctuation_en])\n",
-    "    dataset['review'] = dataset['review'].apply(lambda x: [porter.stem(word) for word in x ])\n",
+    "    dataset['review'] = dataset['review'].apply(lambda x: [word for word in x if word not in stopwords_punctuation_en and len(word)>2])\n",
+    "    dataset['review'] = dataset['review'].apply(lambda x: [lemmatizer.lemmatize(word) for word in x ])\n",
     "\n",
     "print('\\n',labeled_train_data.loc[20882,'review'])"
    ]
@@ -228,12 +223,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "154   (0, 563)\t1\n",
+      "  (0, 1851)\t1\n",
+      "  (0, 1908)\t2\n",
+      "  (0, 2715)\t1\n",
+      "  (0, 2929)\t1\n",
+      "  (0, 4256)\t1\n",
+      "  (0, 4634)\t1\n",
+      "  (0, 4988)\t3\n",
+      "  (0, 6391)\t1\n",
+      "  (0, 6929)\t1\n",
+      "  (0, 7039)\t1\n",
+      "  (0, 7409)\t1\n",
+      "  (0, 7528)\t1\n",
+      "  (0, 8678)\t1\n",
+      "  (0, 8818)\t1\n",
+      "  (0, 9947)\t1\n",
+      "  (0, 10147)\t1\n",
+      "  (0, 10786)\t1\n",
+      "  (0, 10878)\t1\n",
+      "  (0, 11212)\t1\n",
+      "  (0, 12177)\t1\n",
+      "  (0, 12449)\t1\n",
+      "  (0, 13561)\t1\n",
+      "  (0, 14065)\t1\n",
+      "  (0, 14842)\t1\n",
+      "  :\t:\n",
+      "  (0, 71089)\t1\n",
+      "  (0, 71194)\t1\n",
+      "  (0, 71275)\t1\n",
+      "  (0, 71797)\t1\n",
+      "  (0, 72732)\t1\n",
+      "  (0, 74123)\t1\n",
+      "  (0, 74131)\t1\n",
+      "  (0, 74246)\t1\n",
+      "  (0, 75338)\t1\n",
+      "  (0, 75777)\t1\n",
+      "  (0, 76073)\t1\n",
+      "  (0, 76099)\t1\n",
+      "  (0, 76421)\t1\n",
+      "  (0, 77899)\t1\n",
+      "  (0, 78701)\t1\n",
+      "  (0, 79944)\t1\n",
+      "  (0, 80611)\t3\n",
+      "  (0, 80782)\t3\n",
+      "  (0, 81106)\t2\n",
+      "  (0, 81426)\t1\n",
+      "  (0, 81584)\t2\n",
+      "  (0, 81589)\t1\n",
+      "  (0, 82145)\t1\n",
+      "  (0, 82440)\t1\n",
+      "  (0, 82538)\t1\n"
+     ]
+    }
+   ],
    "source": [
-    "# for dataset in combined_dataset:\n",
-    "#     dataset\n",
+    "\n",
     "labeled_train_data_bow = labeled_train_data.copy()\n",
     "labeled_train_data_bow['review'] = labeled_train_data_bow['review'].apply(lambda x: ' '.join([word for word in x]))\n",
     "\n",
@@ -250,7 +302,7 @@
     "labeld_unlabeled_train_features = bow.fit(train_data_bow['review']) # Training dictionary on all training data ie. labeled+unlabeled\n",
     "labeled_train_data_bow_features = bow.transform(labeled_train_data_bow['review'])\n",
     "test_features_bow = bow.transform(test_data_bow['review'])\n",
-    "\n",
+    "print(labeled_train_data_bow_features[0].size,labeled_train_data_bow_features[0])\n",
     "mnb_bow = MultinomialNB()\n",
     "mnb_bow.fit(labeled_train_data_bow_features, labeled_train_data_bow['sentiment'] )\n",
     "\n",
@@ -298,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +359,8 @@
      "text": [
       "[('crime', 0.6809863448143005), ('investig', 0.652167797088623), ('victim', 0.6430747509002686)]\n",
       "0.4260052\n",
-      "[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan]\n"
+      "31805\n",
+      "(25000,)\n"
      ]
     }
    ],
@@ -315,19 +368,19 @@
     "cbow = Word2Vec.load(\"./word2vec_cbow.model\")\n",
     "print(cbow.wv.most_similar('murder', topn=3))\n",
     "print(cbow.wv.similarity('murder','gruesom'))\n",
-    "\n",
+    "print(len(cbow.wv.key_to_index))\n",
     "def vec2scalar(word):\n",
     "\n",
     "    try: \n",
-    "        word in cbow.wv.vocab\n",
-    "        return cbow.wv[word]\n",
-    "    except:\n",
+    "        if word in cbow.wv.key_to_index:\n",
+    "            return np.mean(cbow.wv[word])\n",
+    "    except KeyError:\n",
     "        return np.nan\n",
     "\n",
     "labeled_train_data_cbow_features = labeled_train_data['review'].apply(lambda x: [vec2scalar(word) for word in x]) \n",
-    "                #BUG: some words are not in vocab, either catch the exception or filter words. \n",
     "test_features_cbow_features = test_data['review'].apply(lambda x: [vec2scalar(word) for word in x])\n",
-    "print(labeled_train_data_cbow_features.loc[2])\n",
+    "\n",
+    "print(labeled_train_data_cbow_features.shape)\n",
     "\n",
     "# mnb_cbow = MultinomialNB()\n",
     "# mnb_cbow.fit(labeld_unlabeled_train_features,labeled_train_data['sentiment'])\n",
